force-app/main/default/objects/Farm_Bed__c/Farm_Bed__c.object-meta.xml
<CustomObject>
    <description>Represents a specific plot or area of land used for planting crops or trees.</description>
    <label>Farm Bed</label>
    <nameField>
        <label>Farm Bed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Farm Beds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>