force-app/main/default/objects/Farm_Bed__c/fields/Bed_Location__c.field-meta.xml
<CustomField>
    <fullName>Bed_Location__c</fullName>
    <description>GPS Location of the farm bed.</description>
    <label>Bed Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>