force-app/main/default/objects/Farm_Bed__c/fields/Bed_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Bed_Size_Acres__c</fullName>
    <description>Size of the farm bed in acres.</description>
    <label>Bed Size (Acres)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>