force-app/main/default/objects/Farm_Bed__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <description>Physical dimensions of the farm bed (e.g., 10x20 ft).</description>
    <label>Dimensions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>