force-app/main/default/objects/Farm_Bed__c/fields/Irrigation_Status__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Status__c</fullName>
    <description>Status of irrigation for this farm bed.</description>
    <label>Irrigation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Needs Repair</fullName>
            </value>
            <value>
                <fullName>Non-functional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>