force-app/main/default/objects/Farm_Bed__c/fields/Last_Soil_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Soil_Test_Date__c</fullName>
    <description>Date of the most recent soil test for this bed.</description>
    <label>Last Soil Test Date</label>
    <type>Date</type>
</CustomField>