force-app/main/default/objects/Farm_Bed__c/fields/Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Location_Description__c</fullName>
    <description>Description of the bed&apos;s location.</description>
    <label>Location Description</label>
    <type>TextArea</type>
</CustomField>