force-app/main/default/objects/Farm_Bed__c/fields/Soil_Type__c.field-meta.xml
<CustomField>
    <fullName>Soil_Type__c</fullName>
    <description>The primary soil composition of the farm bed.</description>
    <label>Soil Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loamy</fullName>
                <default>true</default>
                <label>Loamy</label>
            </value>
            <value>
                <fullName>Sandy</fullName>
            </value>
            <value>
                <fullName>Clay</fullName>
            </value>
            <value>
                <fullName>Silt</fullName>
            </value>
            <value>
                <fullName>Peaty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>