force-app/main/default/objects/Farm_Bed__c/fields/Status_Force__c.field-meta.xml
<CustomField>
    <fullName>Status_Force__c</fullName>
    <description>Forced status field for data import.</description>
    <label>Status Force</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Fallow</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Under Preparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>