force-app/main/default/objects/Farm_Bed__c/listViews/Active_Beds.listView-meta.xml
<ListView>
    <fullName>Active_Beds</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Soil_Type__c</columns>
    <columns>Irrigation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Planted,Growing,Ready for Harvest</value>
    </filters>
    <label>Active Beds</label>
</ListView>