force-app/main/default/objects/Farm_Bed__c/listViews/Fallow_Beds.listView-meta.xml
<ListView>
    <fullName>Fallow_Beds</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Soil_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fallow</value>
    </filters>
    <label>Fallow Beds</label>
</ListView>