force-app/main/default/objects/Farm_Bed__c/listViews/Needs_Preparation.listView-meta.xml
<ListView>
    <fullName>Needs_Preparation</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Soil_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under Preparation</value>
    </filters>
    <label>Needs Preparation</label>
</ListView>